# wil

./: .clang-format  .clang-tidy  .gitignore  .vsconfig  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md  ThirdPartyNotices.txt  runtests.cmd  vcpkg-configuration.json  vcpkg.json
.github/skills/: README.md
.github/skills/doxygen-comments/: SKILL.md
.github/workflows/: ci.yml  format.yml
cmake/: WILConfig.cmake.in  common_build_flags.cmake
docs/: CMakeLists.txt  Doxyfile  WilDocs.md  nosal2.doxyfile
include/wil/: Microsoft.Windows.Telemetry.Common.h  Microsoft.Windows.Telemetry.Resource.h  Microsoft.Windows.Telemetry.Result.h  Microsoft.Windows.Telemetry.ResultMacros.h  Safearrays.h  Tracelogging.h  allocators.h  async.h  chrono.h  com.h  com_apartment_variable.h  common.h  coroutine.h  cppwinrt.h  cppwinrt_authoring.h  cppwinrt_helpers.h  cppwinrt_notifiable_module_lock.h  cppwinrt_notifiable_server_lock.h  cppwinrt_register_com_server.h  cppwinrt_wrl.h  enum_iterator.h  filesystem.h  network.h  networking.h  nt_result_macros.h  path.h  process_helpers.h  property.h  registry.h  registry_basic.h  registry_helpers.h  resource.h  result.h  result_macros.h  result_originate.h  rpc.h  rpc_helpers.h  safearrays.h  safecast.h  sockets.h  (+14 more)
include/wil/telemetry/: microsofttelemetry.h
natvis/: wil.natstepfilter  wil.natvis
packaging/nuget/: CMakeLists.txt  Microsoft.Windows.ImplementationLibrary.nuspec  Microsoft.Windows.ImplementationLibrary.targets
scripts/: azure-pipelines.yml  build.cmd  build_all.cmd  call-vcvars.cmd  check-formatting.cmd  enable-appverifier.cmd  find-clang-format.cmd  format-changes.cmd  init.cmd  init_all.cmd  run-clang-format.cmd  runtests.cmd  stress-test.cmd
tests/: AllocatorTests.cpp  BasicRegistryTests.cpp  CMakeLists.txt  ComApartmentVariableTests.cpp  ComTests.cpp  CommonTests.cpp  CoroutineTests.cpp  CppWinRT20Tests.cpp  CppWinRTAuthoringTests.cpp  CppWinRTComServerCustomModuleLockTests.cpp  CppWinRTComServerTests.cpp  CppWinRTNotifiableServerLockTests.cpp  CppWinRTTests.cpp  FakeWinRTTypes.h  FileSystemTests.cpp  MallocSpy.h  MockingTests.cpp  NetworkTests.cpp  NetworkingTests.cpp  NtResultTests.cpp  PathTests.cpp  PropertyTests.cpp  RegistryTests.cpp  ResourceTests.cpp  ResultTests.cpp  Rpc.cpp  SafeCastTests.cpp  SafearrayTests.cpp  SocketTests.cpp  StlTests.cpp  TokenHelpersTests.cpp  Toolhelp32Tests.cpp  TraceLoggingTests.cpp  TraceLoggingTests.h  TraceLoggingTests_PartB.cpp  UniqueWinRTEventTokenTests.cpp  WatcherTests.cpp  WinRTTests.cpp  WinVerifyTrustTest.cpp  WindowingTests.cpp  (+11 more)
tests/app/: CMakeLists.txt
tests/cpplatest/: CMakeLists.txt
tests/cppwinrt-com-server/: CMakeLists.txt
tests/cppwinrt-com-server-custom-module-lock/: CMakeLists.txt
tests/cppwinrt-notifiable-server-lock/: CMakeLists.txt
tests/noexcept/: CMakeLists.txt
tests/normal/: CMakeLists.txt
tests/sanitize-address/: CMakeLists.txt
tests/sanitize-undefined-behavior/: CMakeLists.txt
tests/win7/: CMakeLists.txt
tests/workarounds/wrl/wrl/: async.h  implements.h
tests/zsvsafe/: CMakeLists.txt
vcpkg-overlay/catch2/: except.patch  portfile.cmake  synch.patch
vcpkg-overlay/detours/: portfile.cmake
